SUBDIRS = src giomm

EXTRA_DIST = README giommconfig.h.in giomm-2.4.pc.in giomm.h

gtkmm_includedir      = $(includedir)/giomm-2.4
gtkmm_include_DATA  = giomm.h

gtkmm_configdir       = $(libdir)/giomm-2.4/include
gtkmm_config_DATA     = giommconfig.h

pkgconfigdir          = $(libdir)/pkgconfig
pkgconfig_DATA        = giomm-2.4.pc

